--- a/README
+++ b/README
@@ -8,3 +8,16 @@ Schreibe eine Methode die prüft ob eine Zahl größer als 0 ist.
 Schreibe eine Methode die das Quadrat einer Zahl berechnet.
 Schreibe ein Programm, das den Namen des Nutzers einliest (Scanner) und ihn mit Namen begrüßt.
 (Nicht vergessen: für alle(außer System.out.println(), Nutzereingaben, Random) Methoden Tests zu schreiben 🙂)
+
+Level: Intermediate
+
++ Fülle ein String-Array mit den Zahlenwörtern “Eins” bis “Zehn”
+
++ Schreibe eine Methode die zu einer einstelligen Zahl das entsprechende Zahlenwort ausgibt.
+
++ Schreibe ein Programm das die Zahlen 1-100 ausgibt, aber:
++ Vor Zahlen die durch 3 teilbar sind (modulo) soll ein # stehen
++ Vor Zahlen die durch 5 teilbar sind soll ein $ stehen
+
+Schreibe ein Programm die Wörter vom Benutzer einliest (Scanner) und diese in einem Array speichert.
+Gib vor jeder Eingabe jeweils die eingegebenen Wörter noch mal aus.
